dev: fix alignement style on room

--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@ h1, h2, h3 {
 }
 
 .container > * {
-  padding: 0 4%;
+  padding: 0 10%;
   margin-bottom: 4%;
 }
 
@@ -143,11 +143,20 @@ h1, h2, h3 {
   justify-content: start;
 }
 
+.primary-message-row .message-card {
+  text-align: right;
+}
+.secondary-message-row .message-card {
+  text-align: left;
+}
+
 .primary-message-row .message-box {
   background-color: var(--magenta);
+  margin-left: auto;
 }
 .secondary-message-row .message-box {
   background-color: var(--blue-2);
+  margin-right: auto;
 }
 
 .primary-message-row .message-name {
@@ -173,6 +182,7 @@ h1, h2, h3 {
   padding: 7px 12px;
   max-width: 60%;
   font-weight: bold;
+  text-align: left;
 }
 
 /* MESSAGE INPUT FOOTER */
@@ -180,7 +190,7 @@ h1, h2, h3 {
   overflow: scroll;
   position: fixed;
   bottom: 0;
-  width: 95%;
+  width: 80%;
   padding-top: 15px;
   padding-bottom: 15px;
   margin: 0;
